cmake_minimum_required(VERSION 3.14)
project(multi)
set(CMAKE_CXX_STANDARD 14) # googletest requires at least c++14
include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)
FetchContent_MakeAvailable(googletest)
enable_testing()
add_executable(
  communications_test
  communications_test.cpp
)
target_link_libraries(
  communications_test
  gtest_main
)
add_executable(
  parser_test
  parser_test.cpp
)
target_link_libraries(
  parser_test
  gtest_main
)
add_executable(
  Vector3Int_test
  Vector3Int_test.cpp
)
target_link_libraries(
  Vector3Int_test
  gtest_main
)
add_executable(
  generate_base_stations_positions_test
  generate_base_stations_positions_test.cpp
)
target_link_libraries(
  generate_base_stations_positions_test
  gtest_main
)
add_executable(
  UsersBeginEndPositionsGenerator_test
  UsersBeginEndPositionsGenerator_test.cpp
)
target_link_libraries(
  UsersBeginEndPositionsGenerator_test
  gtest_main
)
add_executable(
  EmbbUsersMulticonnectivityCapabilitiesGenerator_test
  EmbbUsersMulticonnectivityCapabilitiesGenerator_test.cpp
)
target_link_libraries(
  EmbbUsersMulticonnectivityCapabilitiesGenerator_test
  gtest_main
)
add_executable(
  UrllcUsersDemandsGenerator_test
  UrllcUsersDemandsGenerator_test.cpp
)
target_link_libraries(
  UrllcUsersDemandsGenerator_test
  gtest_main
)
include(GoogleTest)
gtest_discover_tests(communications_test)
gtest_discover_tests(parser_test)
gtest_discover_tests(Vector3Int_test)
gtest_discover_tests(generate_base_stations_positions_test)
gtest_discover_tests(UsersBeginEndPositionsGenerator_test)
gtest_discover_tests(EmbbUsersMulticonnectivityCapabilitiesGenerator_test)
gtest_discover_tests(UrllcUsersDemandsGenerator_test)
